[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://PlayerSM.gd" type="Script" id=2]
[ext_resource path="res://player.png" type="Texture" id=3]
[ext_resource path="res://hit.wav" type="AudioStream" id=4]
[ext_resource path="res://dash.wav" type="AudioStream" id=5]

[sub_resource type="ParticlesMaterial" id=1]
flag_disable_z = true
spread = 5.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = -100.0
initial_velocity_random = 1.0
angular_velocity = 360.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
hue_variation = 0.1
hue_variation_random = 1.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
max_speed = 125
max_rotate_speed = 225
acceleration = 10
friction = 5

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2, 0 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -4, -4, 8, 0, -4, 4, 0, 0 )

[node name="Shields" type="Node2D" parent="."]

[node name="PlayerSM" type="Node" parent="."]
script = ExtResource( 2 )

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Emissions" type="Particles2D" parent="."]
show_behind_parent = true
amount = 40
lifetime = 0.65
local_coords = false
process_material = SubResource( 1 )

[node name="InvincibiltyTimer" type="Timer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="DashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="timeout" from="InvincibiltyTimer" to="." method="_on_InvincibiltyTimer_timeout"]
